# Connect4-cpp

./: CMakeLists.txt  README.md  plotting.m
src/: main.cpp
src/icon/: connect4.rc
src/logic/: ai.cpp  ai.h  ai_.cpp  ai_.h  board.cpp  board.h  game.cpp  game.h
src/ui/: form.cpp  form.h  form.ui
src/utils/: observer.cpp  observer.h
